8136930: Simplify use of module-system options by custom launchers
Reviewed-by: alanb, ksrini, henryjen, sundar